--- a/style.css
+++ b/style.css
@@ -81,14 +81,12 @@ nav ul li a{
 .firstSectionText h1 b{
 	color:rgba(0,0,0,.85);
 	background-color: white;
-	/*border:1px solid black;*/
 	padding: 8px 20px;
 	border-radius:4px;
 	font-size:18px;
 	text-transform: uppercase;
+	transform: translateX(5px);
 	position: absolute;
-	top:35%;
-	left:65.5%;
 	}
 
 .firstSectionText p{
@@ -104,9 +102,8 @@ nav ul li a{
 /*--second section--*/
 .secondSection{
 	width:95%;
-	position: absolute;
-	top:80%;
-	left:2%;
+	transform:translateY(-50px);
+	margin:0 auto;
 	background-color:white;
 	border-top-right-radius:5px;
 	border-top-left-radius:5px;
